kubernetes/postgres-operator/linkerd.yaml
---
apiVersion: policy.linkerd.io/v1beta1
kind: HTTPRoute
metadata:
  name: postgres-cluster-health-routes
  namespace: postgres
spec:
  parentRefs:
    - name: postgres-cluster-health
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            value: "/liveness"
            type: "PathPrefix"
          method: GET
        - path:
            value: "/readiness"
            type: "PathPrefix"
          method: GET
---
apiVersion: policy.linkerd.io/v1beta1
kind: HTTPRoute
metadata:
  name: postgres-backup-health-routes
  namespace: postgres
spec:
  parentRefs:
    - name: postgres-backup-health
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            value: "/"
            type: "PathPrefix"
          method: GET
